--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ li {list-style-type: none;}
 a {text-decoration: none;}
 
 .header {
-    background-color: #202020; 
+    background-color: #373435; 
     display: flex;
     position: relative;
     z-index: 1;
@@ -138,6 +138,8 @@ a {text-decoration: none;}
     position: relative;
     margin-left: 10%;
     color: #00A859;
+    font-weight: bold;
+    margin-top: 150px;
 }
 .tv {
     width: 80%;
@@ -170,7 +172,9 @@ a {text-decoration: none;}
 
 .list-img  {
     width: 25%;
-    margin-bottom: 50px;    
+    margin-bottom: 50px; 
+    position: relative; 
+    left: 20px;  
 }
 
 .ellipse {
@@ -251,6 +255,10 @@ a {text-decoration: none;}
     background-color: #00A859;
     display: flex;
     position: relative;
+    height: 400px;
+    margin-bottom: 170px;
+
+
 }
 
 .info-img {
@@ -285,10 +293,11 @@ a {text-decoration: none;}
     background-color: #FFFFFF;
     font-size: 20px;
     position: relative;
-    bottom: 100px;
+    bottom: 50px;
     margin-left: 10%;
     -webkit-box-shadow: 3px 4px 19px -3px rgba(0,0,0,0.78); 
     box-shadow: 3px 4px 19px -3px rgba(0,0,0,0.78);
+    height: 530px;
 }
 
 .info p {
@@ -304,7 +313,7 @@ a {text-decoration: none;}
 }
 
 .info li {
-    margin-bottom: 30px;
+    margin-bottom: 60px;
     margin-left: 20%;
 }
 
@@ -320,6 +329,7 @@ a {text-decoration: none;}
 .menu-list {
     position: relative;
     top: 30px;
+    
 }
 
 .menu-list ul {
@@ -343,14 +353,42 @@ a {text-decoration: none;}
 .logo1 {
     width: 100px;
     position: relative;
-    left: 100px;
+    left: 50px;
     margin-bottom: 30px;
+}
+
+.channel-icons {
+    position: relative;
+    right: 57px;
+    margin-left: 8px;
+}
+.channel-icons1 {
+    position: relative;
+    right: 41px;
+    margin-left: 5px;
 }
 .packets {
     padding: 10px 0 0 100px;
     margin: auto;
 }
-
+.mySlides img {
+    height: 390px;
+}
+.prev {
+    position: relative;
+    bottom: 220px;
+    cursor: pointer;
+    left:220px;
+    font-size: 40px;
+    
+}
+.next {
+    position: relative;
+    left: 80%;
+    cursor: pointer;
+    bottom: 220px;
+    font-size: 40px;
+}
 .packet {
     display: flex;
     position: relative;
@@ -439,14 +477,16 @@ sup {
     display: flex;
     position: relative;
     margin-top: 200px;
+    height: 250px;
 }
 .info1 {
     min-width: 300px;
+    height: 350px;
     width: 30%;
     background-color: #FFFFFF;
     font-size: 14px;
     position: relative;
-    bottom: 100px;
+    bottom: 60px;
     margin-left: 16.5%;
     -webkit-box-shadow: 3px 4px 19px -3px rgba(0,0,0,0.78); 
     box-shadow: 3px 4px 19px -3px rgba(0,0,0,0.78);
@@ -454,6 +494,9 @@ sup {
 
 .pay-method {
     display: flex;
+    position: relative;
+    top: 40px;
+    padding-right: 20px;
 }
 
 .pay-method p {
@@ -663,7 +706,7 @@ sup {
 .main-info {
     background-color: #000000;
     display: flex;
-    margin-top: -62px;
+    margin-top: -78px;
 }
 
 .main-info img {
@@ -744,7 +787,7 @@ sup {
 .channels1 {
     width: 80%;
     margin: auto;
-    background-color:rgba(255, 255, 255, 0.1);
+    background-color:#373435;
     margin-top: 100px;
     display: flex;
     padding-bottom: 50px;
@@ -754,6 +797,7 @@ sup {
 .menu-list1 {
     position: relative;
     top: 30px;
+    left: 50px;
 }
 
 .menu-list1 ul {
@@ -780,7 +824,7 @@ sup {
 .logo2 {
     width: 100px;
     position: relative;
-    left: 100px;
+    left: 60px;
     margin-bottom: 30px;
 }
 .packets1 {
@@ -883,6 +927,7 @@ sup {
     display: flex;
     position: relative;
     top: 100px;
+    height: 400px;
 }
 
 .info-img1 {
@@ -930,10 +975,11 @@ sup {
     border: 1px solid #00A859;
     font-size: 20px;
     position: relative;
-    bottom: 100px;
+    bottom: 50px;
     margin-left: 16.5%;
     -webkit-box-shadow: 3px 4px 19px -3px rgba(0,0,0,0.78); 
     box-shadow: 3px 4px 19px -3px rgba(0,0,0,0.78);
+    height: 500px;
 }
 
 .info3 p {
@@ -964,7 +1010,7 @@ sup {
 
 .back {
     background-color: #000000;
-    padding-bottom: 100px;
+    padding-bottom:140px;
 }
 
 .footer-back {
