--- a/css/style.css
+++ b/css/style.css
@@ -450,6 +450,8 @@ sup {
     flex-wrap: wrap;
     position: relative;
     top: 40px;  
+    height: 500px;
+    overflow-y: auto;
 }
 
 .list1 {
@@ -495,8 +497,6 @@ sup {
 
 .pay-method {
     display: flex;
-    position: relative;
-    top: 40px;
     padding-right: 20px;
 }
 
@@ -582,7 +582,11 @@ sup {
     width:30px;
 }
 
-
+.pay-triangle {
+    position: relative;
+    top: 90px;
+    right: 25px;
+}
 
 
 
@@ -902,6 +906,8 @@ sup {
     flex-wrap: wrap;
     position: relative;
     top: 40px;  
+    height: 500px;
+    overflow-y: auto;
 }
 
 .channels-list1 p {
