--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 li {list-style-type: none;}
 a {text-decoration: none;}
 
+
+body {
+    font-family: 'FiraGO', sans-serif;
+
+}
 .header {
     background-color: #373435; 
     display: flex;
@@ -9,7 +14,7 @@ a {text-decoration: none;}
     z-index: 1;
     position: sticky;
     top: 0;
-    
+
 }
 
 .logo {
@@ -351,9 +356,11 @@ a {text-decoration: none;}
     font-size: 10px;
     float: right;
 }
+
 .mid-channels {
     width: 100%;
 }
+
 .logo1 {
     width: 100px;
     position: relative;
@@ -364,7 +371,7 @@ a {text-decoration: none;}
 .channel-icons {
     position: relative;
     right: 57px;
-    margin-left: 8px;
+    margin-left: 7px;
 }
 .channel-icons1 {
     position: relative;
